# snappy-web-agent

./: .gitignore  Cargo.toml  LICENSE.rtf  README.md  build_macos.sh  build_nsis.sh  build_windows.bat  build_windows.ps1  build_wine.ps1  build_wine.sh  create_portable_package.sh  deny.toml  install-udev-rules.sh  installer.nsi  release.sh  snappy-web-agent-1.0.0-setup.wixpdb  uninstall-udev-rules.sh
.github/: Pipeline_README.md
.github/workflows/: ci.yml  release.yml  security.yml
debian/: 99-snappy-web-agent.rules  postinst  postrm  prerm  snappy-web-agent.service
pkg/: distribution.xml
pkg/component/: snappy-web-agent-component.pkg
pkg/resources/: conclusion.html  license.html  welcome.html
pkg/scripts/: postinstall  preinstall
src/: encryption.rs  main.rs  models.rs  serial.rs  socketio.rs
wix/: LICENSE.rtf  service-manager.bat  snappy-web-agent.wixobj  snappy-web-agent.wxs
